[Obsolete] Vlc.DotNet (cppcli testing)/Extern References/Latest/Include/vlc/libvlc_media_player.h


typedef struct libvlc_media_player_t libvlc_media_player_t;
VLC_PUBLIC_API libvlc_media_player_t * libvlc_media_player_new( libvlc_instance_t *p_libvlc_instance );
VLC_PUBLIC_API libvlc_media_player_t * libvlc_media_player_new_from_media( libvlc_media_t *p_md );
VLC_PUBLIC_API void libvlc_media_player_release( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_media_player_retain( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_media_player_set_media( libvlc_media_player_t *p_mi,
                                                   libvlc_media_t *p_md );
VLC_PUBLIC_API libvlc_media_t * libvlc_media_player_get_media( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API libvlc_event_manager_t * libvlc_media_player_event_manager ( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API int libvlc_media_player_play ( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_media_player_pause ( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_media_player_stop ( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API
void libvlc_video_set_callbacks( libvlc_media_player_t *mp,
    void *(*lock) (void *opaque, void **plane),
    void (*unlock) (void *opaque, void *picture, void *const *plane),
    void (*display) (void *opaque, void *picture),
    void *opaque );
VLC_PUBLIC_API libvlc_time_t libvlc_media_player_get_length( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API libvlc_time_t libvlc_media_player_get_time( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_media_player_set_time( libvlc_media_player_t *p_mi, libvlc_time_t i_time );
VLC_PUBLIC_API float libvlc_media_player_get_position( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_media_player_set_position( libvlc_media_player_t *p_mi, float f_pos );
VLC_PUBLIC_API void libvlc_media_player_set_chapter( libvlc_media_player_t *p_mi, int i_chapter );
VLC_PUBLIC_API int libvlc_media_player_get_chapter( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API int libvlc_media_player_get_chapter_count( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API int libvlc_media_player_will_play( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API float libvlc_media_player_get_rate( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API int libvlc_media_player_set_rate( libvlc_media_player_t *p_mi, float rate );
VLC_PUBLIC_API libvlc_state_t libvlc_media_player_get_state( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API float libvlc_media_player_get_fps( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API unsigned libvlc_media_player_has_vout( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API int libvlc_media_player_is_seekable( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API int libvlc_media_player_can_pause( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_toggle_fullscreen( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_set_fullscreen( libvlc_media_player_t *p_mi, int b_fullscreen );
VLC_PUBLIC_API int libvlc_get_fullscreen( libvlc_media_player_t *p_mi );
VLC_DEPRECATED_API
int libvlc_video_get_height( libvlc_media_player_t *p_mi );
VLC_DEPRECATED_API
int libvlc_video_get_width( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API char *libvlc_video_get_aspect_ratio( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_video_set_aspect_ratio( libvlc_media_player_t *p_mi, const char *psz_aspect );
VLC_PUBLIC_API int libvlc_video_get_spu( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API int libvlc_video_set_spu( libvlc_media_player_t *p_mi, unsigned i_spu );
VLC_PUBLIC_API int libvlc_video_set_subtitle_file( libvlc_media_player_t *p_mi, const char *psz_subtitle );
VLC_PUBLIC_API char *libvlc_video_get_crop_geometry( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API
void libvlc_video_set_crop_geometry( libvlc_media_player_t *p_mi, const char *psz_geometry );
VLC_PUBLIC_API int libvlc_video_get_teletext( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_video_set_teletext( libvlc_media_player_t *p_mi, int i_page );
VLC_PUBLIC_API void libvlc_toggle_teletext( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API
int libvlc_video_take_snapshot( libvlc_media_player_t *p_mi, unsigned num,
                                const char *psz_filepath, unsigned int i_width,
                                unsigned int i_height );
VLC_PUBLIC_API void libvlc_audio_toggle_mute( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API int libvlc_audio_get_mute( libvlc_media_player_t *p_mi );
VLC_PUBLIC_API void libvlc_audio_set_mute( libvlc_media_player_t *p_mi, int status );