Extern References/Latest/Include/vlc/libvlc.h


VLC_PUBLIC_API
void libvlc_set_exit_handler( libvlc_instance_t *p_instance,
                              void (*cb) (void *), void *opaque );