Vlc.DotNet/Core/Interop/InteropMethods.cs


        #region internal static extern String libvlc_media_get_meta(IntPtr p_media, libvlc_meta_t e_meta, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Read the meta of the media.
        /// </summary>
        /// <param name="p_media"></param>
        /// <param name="e_meta"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern String libvlc_media_get_meta(IntPtr p_media, libvlc_meta_t e_meta, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern VlcState libvlc_media_get_state(IntPtr p_media, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Get current state of media descriptor object.
        /// </summary>
        /// <param name="p_media"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern VlcState libvlc_media_get_state(IntPtr p_media, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern IntPtr libvlc_media_subitems(IntPtr p_media, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Get subitems of media descriptor object.
        /// </summary>
        /// <param name="p_media"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_subitems(IntPtr p_media, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern IntPtr libvlc_media_event_manager(IntPtr p_media, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Get event manager from media descriptor object.
        /// </summary>
        /// <param name="p_media"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_event_manager(IntPtr p_media, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern long libvlc_media_get_duration(IntPtr p_media, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Get duration of media descriptor object item.
        /// </summary>
        /// <param name="p_media"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern long libvlc_media_get_duration(IntPtr p_media, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern bool libvlc_media_is_preparsed(IntPtr p_media, ref libvlc_exception_t p_exception)

        /// <summary>
        /// Get preparsed status for media descriptor object.
        /// </summary>
        /// <param name="p_media"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern bool libvlc_media_is_preparsed(IntPtr p_media, ref libvlc_exception_t p_exception);

        #endregion

        //    //Sets media descriptor's user_data.
        //[DllImport("libvlc")]
        //internal static extern void libvlc_media_set_user_data(IntPtr p_media, void* p_new_user_data, ref libvlc_exception_t p_exception);

        //    //Get media descriptor's user_data. 
        //void * 	libvlc_media_get_user_data (IntPtr p_media, ref libvlc_exception_t p_exception);

        #endregion

        #region Media Player Methods

        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_player_new(IntPtr p_instance, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_player_new_from_media(IntPtr p_media, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_release(IntPtr p_media);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_retain(IntPtr p_media);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_set_media(IntPtr p_media_player, IntPtr p_media, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_player_get_media(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_player_event_manager(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_play(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_pause(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_stop(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_set_drawable(IntPtr p_media_player, IntPtr handle, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern IntPtr libvlc_media_player_get_drawable(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern long libvlc_media_player_get_length(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern long libvlc_media_player_get_time(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_set_time(IntPtr p_media_player, long time, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern float libvlc_media_player_get_position(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_set_position(IntPtr p_media_player, float position, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_set_chapter(IntPtr p_media_player, int chapter, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_media_player_get_chapter(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_media_player_get_chapter_count(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern bool libvlc_media_player_will_play(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern float libvlc_media_player_get_rate(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_media_player_set_rate(IntPtr p_media_player, float rate, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern VlcState libvlc_media_player_get_state(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern float libvlc_media_player_get_fps(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern bool libvlc_media_player_has_vout(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern bool libvlc_media_player_is_seekable(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern bool libvlc_media_player_can_pause(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        #endregion

        #region Video Methods

        [DllImport("libvlc")]
        internal static extern void libvlc_toggle_fullscreen(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_set_fullscreen(IntPtr p_media_player, bool b_fullscreen, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern bool libvlc_get_fullscreen(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_video_get_height(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_video_get_width(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern String libvlc_video_get_aspect_ratio(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_video_set_aspect_ratio(IntPtr p_media_player, [MarshalAs(UnmanagedType.LPStr)] string psz_geometry, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_video_get_spu(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_video_set_spu(IntPtr p_media_player, int i_spu, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_video_set_subtitle_file(IntPtr p_media_player, String psz_subtitle, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern String libvlc_video_get_crop_geometry(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_video_set_crop_geometry(IntPtr p_media_player, [MarshalAs(UnmanagedType.LPStr)] string psz_geometry, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_toggle_teletext(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_video_get_teletext(IntPtr p_media_player, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_video_set_teletext(IntPtr p_media_player, int i_page, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_video_take_snapshot(IntPtr p_media_player, [MarshalAs(UnmanagedType.LPStr)] string psz_filepath, uint i_width, uint i_height, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_video_resize(IntPtr p_media_player, int width, int height, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern int libvlc_video_reparent(IntPtr p_media_player, IntPtr parent, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_video_set_size(IntPtr p_instance, int width, int height, ref libvlc_exception_t p_exception);

        #endregion

        #region Audio Methods

        [DllImport("libvlc")]
        internal static extern void libvlc_audio_toggle_mute(IntPtr p_instance, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern bool libvlc_audio_get_mute(IntPtr p_instance, ref libvlc_exception_t p_exception);

        [DllImport("libvlc")]
        internal static extern void libvlc_audio_set_mute(IntPtr p_instance, bool status, ref libvlc_exception_t p_exception);
